3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Remove object type CONFUSION since it was not used anymore.
---
common/item.c: Remove CONFUSION entry from item_types[] array.
include/define.h: Uncomment #define CONFUSION.
Andreas Kirschbaum 2006-02-22

lib/collect.pl.in: Fix generation of 'editor_folder' field. It did not work
   too well for .arc files in deep subdirs.
lib/{archetypes,bmaps.paths,crossfire.0}: Rebuilt.
Andreas Kirschbaum 2006-02-21

random_maps/random_map.c: Cause the random map generator to skip certain
    elements if the style is set to "none".
doc/Developers/random-maps: Document above change
Alex Schultz 2006-02-20

socket/request.c: Don't crash on trying to send a spell which doesn't have an
   associated skill
Brendan Lally 2006-02-20

Do not allow to dimension door into monsters or earthwalls.
---
server/spell_effect.c: In dimension_door() do not allow destinations that are
   P_IS_ALIVE.
Andreas Kirschbaum 2006-02-19

random_maps/style.c: In find_style() fix access to uninitialized variable.
Andreas Kirschbaum 2006-02-19

Prevent crossedit from stripping out 'maplore' map header field.
---
common/map.c: Add code to load/save/dump maplore information.
include/map.h: Add new maplore field to map struct.
Andreas Kirschbaum 2006-02-19

Apply patch #1433271 (code-cleanup) by Stefan Huehner: Add const and static.
---
Affected files: common/{loader.l,los.c,map.c}, include/{libproto.h,sproto.h},
plugins/cfanim/{cfanim.c,include/cfanim.h}, server/{apply.c,skill_util.c}
common/loader.c: Rebuilt.
Andreas Kirschbaum 2006-02-17

common/map.c: Modify ob_blocked() to properly handly objects with a 0