@@ -24,7 +24,8 @@
 /*  You should have received a copy of the GNU General Public License        */
 /*  along with this program; if not, write to the Free Software              */
 /*  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.                */
-/*                                                                           */ /*****************************************************************************/
+/*                                                                           */
+/*****************************************************************************/
 #ifndef PLUGIN_ANIM_H
 #define PLUGIN_ANIM_H
 
@@ -33,6 +34,7 @@
 
 #ifndef __CEXTRACT__
 #include <plugin.h>
+#include <plugin_common.h>
 #endif
 
 #include <plugin_common.h>
