@@ -17,6 +17,17 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+Apply patch #1428057 courtesy Pippijn van Steenhoven: fix to a crashing bug in plugins
+(incoherent order of parameters).
+Also use plugin_common.h in CFAnim instead of having separate definitions.
+Modified files:
+ plugins/cfanim/cfanim.c
+ plugins/cfanim/include/cfanim.h
+ plugins/cfanim/include/cfanim_proto.h
+ plugins/common/plugin_common.c
+ plugins/common/include/plugin_common.h
+Ryo 2006-02-23
+
 Remove object type CONFUSION since it was not used anymore.
 ---
 common/item.c: Remove CONFUSION entry from item_types[] array.
